# stm32-cmake

examples/h743_led/: CMakeLists.txt  blinky.c  stm32h7xx_hal_conf.h
